k8s/GateWay-cilium/gw-class.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: mates-app-class
spec:
  controllerName: io.cilium/gateway-controller
