k8s/GateWay-cilium/gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mates-gateway
  namespace: mates-app
spec:
  gatewayClassName: mates-app-class
  listeners:
  - protocol: HTTP
    port: 80
    name: web
    allowedRoutes:
        namespaces:
          from: Same

  - protocol: HTTPS
    port: 443
    name: websecure
    allowedRoutes:
        namespaces:
          from: Same
    tls:
      mode: Terminate
      certificateRefs:
        - name: gw-cert

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mates-app
  namespace: mates-app
spec:
  parentRefs:
  - name: mates-gateway

  # hostnames:
  #   - mates.localhost

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: front-service
          port: 80
